tests/NormalTests/paczka1/fuzzy1/71163946.err
Error in line 1: 1KD A315 47,6
Error in line 7: 70D7FssnL A779 18,93
Error in line 17: 70D7FssnL S309 36,8
Error in line 18: 70D7FssnL A779 84,4
Error in line 16: GiN6ZCmDnUW A315 75,1
Error in line 29: GiN6ZCmDnUW A455 6,4
